Handle "netfilter: propagate net to nf_bridge_get_physindev" patch
Handle backward compatibility with regard of the patch.

Signed-off-by: Jozsef Kadlecsik <kadlec@netfilter.org>

--- a/configure.ac
+++ b/configure.ac
@@ -890,6 +890,16 @@ else
 	AC_SUBST(HAVE_GFP_KERNEL_ACCOUNT, undef)
 fi
 
+AC_MSG_CHECKING([kernel source for second arg of nf_bridge_get_physindev() in netfilter_bridge.h])
+if test -f $ksourcedir/include/linux/netfilter_bridge.h && \
+   $GREP 'nf_bridge_get_physindev' $ksourcedir/include/linux/netfilter_bridge.h | $GREP -q ' struct net '; then
+	AC_MSG_RESULT(yes)
+	AC_SUBST(HAVE_NF_BRIDGE_GET_PYSINDEV_NET, define)
+else
+	AC_MSG_RESULT(no)
+	AC_SUBST(HAVE_NF_BRIDGE_GET_PYSINDEV_NET, undef)
+fi
+
 AC_MSG_CHECKING([kernel source for struct net_generic])
 if test -f $ksourcedir/include/net/netns/generic.h && \
    $GREP -q 'struct net_generic' $ksourcedir/include/net/netns/generic.h; then
